fixed table scrollbar issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -103,7 +103,7 @@
 
 /* Track */
 .yellowScroll::-webkit-scrollbar-track {
-  background: #1e1e1e;
+  background: #b3b4b4;
   border-radius: 5px;
 }
 
